--- a/style.css
+++ b/style.css
@@ -1,6 +1,29 @@
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 h1 {
   font-size: 50px;
+}
+section{
+  display: flex;
+}
+.half-width{
+  width: 50%;
+  padding-left: 5%;
+}
+.half-width img{
+  width: 80%;
+}
+.hire-btn{
+  text-decoration: none;
+  font-weight: 700;
+  color: white;
+  padding: 10px 40px;
+  background-image: linear-gradient(orange,tomato);
+  border-radius: 5px;
+}
+.top-banner{
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
 }
